--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <img id="image">
+    <p id="fact"></p>
+    <button id="newFact" onclick="location.reload()">New Fact</button>
 </body>
 </html>
