add fact counter

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <img id="image">
     <p id="fact"></p>
     <button id="newFact" onclick="location.reload()">New Fact</button>
+    <p id="counter">This website has displayed a total of <span id="counterValue">000</span> dog facts!</p>
 </body>
 </html>
