--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p id="fact"></p>
     <button id="newFact" onclick="location.reload()">New Fact</button>
     <p id="counter">This website has displayed a total of <span id="counterValue">000</span> dog facts!</p>
+    <footer id="footer">By Maruan Biasi / CodyKoInABox, 2023.</footer>
 </body>
 </html>
